@@ -38,7 +38,7 @@ The C<no_free> flag of the new object is set to 1.
 
 C<method digest : int ($type : L<Net::SSLeay::EVP_MD|SPVM::Net::SSLeay::EVP_MD>, $md : mutable string, $len_ref : int*);>
 
-Calls native L<X509_digest|https://docs.openssl.org/master/man3/X509_digest> function given $type, the pointer value of $md, $len_ref, and returns its return value.
+Calls native L<X509_digest|https://docs.openssl.org/master/man3/X509_digest> function given the pointer value of the instance, $type, the pointer value of $md, $len_ref, and returns its return value.
 
 Exceptions:
 
@@ -54,7 +54,7 @@ If X509_digest failed, an exception is thrown with C<eval_error_id> set to the b
 
 C<method pubkey_digest : int ($type : L<Net::SSLeay::EVP_MD|SPVM::Net::SSLeay::EVP_MD>, $md : mutable string, $len_ref : int*);>
 
-Calls native L<X509_pubkey_digest|https://docs.openssl.org/master/man3/X509_pubkey_digest> function given $type, the pointer value of $md, $len_ref, and returns its return value.
+Calls native L<X509_pubkey_digest|https://docs.openssl.org/master/man3/X509_pubkey_digest> function given the pointer value of the instance, $type, the pointer value of $md, $len_ref, and returns its return value.
 
 Exceptions:
 
@@ -70,7 +70,13 @@ If X509_pubkey_digest failed, an exception is thrown with C<eval_error_id> set t
 
 C<method get_ext_d2i : void ($nid : int, $crit_ref : int*, $idx_ref : int*);>
 
-Calls native L<X509_get_ext_d2i|https://docs.openssl.org/master/man3/X509_pubkey_digest> function given $nid, $crit_ref, $idx_ref.
+Calls native L<X509_get_ext_d2i|https://docs.openssl.org/master/man3/X509_pubkey_digest> function given the pointer value of the instance, $nid, $crit_ref, $idx_ref.
+
+=head2 dup
+
+C<method dup : L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> ();>
+
+Calls native L<X509_dup|https://docs.openssl.org/3.3/man3/X509_dup> function given the pointer value of the instance, creates a new L<Net::SSLeay::X509|SPVM::Net::SSLeay::X509> object, sets the pointer value of the new object to the return value of the native function, and returns the new object.
 
 =head2 DESTROY
 
