@@ -31,6 +31,8 @@ class Net::SSLeay::X509 {
   
   native method get_ext_d2i : void ($nid : int, $crit_ref : int*, $idx_ref : int*);
   
+  native method dup : Net::SSLeay::X509 ();
+  
   native method DESTROY : void ();
   
 }
